fix(error): update error returning
